--- a/churchill/apps/core/locale/ru-ru/LC_MESSAGES/django.po
+++ b/churchill/apps/core/locale/ru-ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-01-11 20:02+0000\n"
+"POT-Creation-Date: 2021-01-24 10:49+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,42 +17,99 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+#: churchill/apps/core/views.py:14
+msgid "Your email verified successfully, now you can login"
+msgstr "Ваш имейл успешно подтверждён, теперь вы можете войти"
+
+#: churchill/apps/core/views.py:17
+msgid "Can't verify you account, please try again"
+msgstr "Ошибка подтверждения вашего аккаунта, попробуйте ещё раз"
+
+#: churchill/apps/currencies/models.py:13
+msgid "Currency"
+msgstr "Валюта"
+
 #: churchill/apps/currencies/models.py:14
+msgid "Currencies"
+msgstr "Валюты"
+
+#: churchill/apps/currencies/models.py:21
 msgid "Buy"
 msgstr "Покупка"
 
-#: churchill/apps/currencies/models.py:15
+#: churchill/apps/currencies/models.py:22
 msgid "Sell"
 msgstr "Продажа"
 
-#: churchill/apps/currencies/services.py:26
-msgid "No currencies are setup"
-msgstr "Не добавлено ни одно валюты"
+#: churchill/apps/currencies/models.py:33
+msgid "Currency Value"
+msgstr "Курс валюты"
 
-#: churchill/apps/profiles/models.py:22
+#: churchill/apps/currencies/models.py:34
+msgid "Currency Values"
+msgstr "Курсы валют"
+
+#: churchill/apps/currencies/services.py:37
+msgid "No currencies are setup"
+msgstr "Не добавлено ни одной валюты"
+
+#: churchill/apps/profiles/models.py:11
+msgid "From the last shot"
+msgstr "От последнего выпитого"
+
+#: churchill/apps/profiles/models.py:12
+msgid "Weekly"
+msgstr "Еженедельно"
+
+#: churchill/apps/profiles/models.py:13
+msgid "Monthly"
+msgstr "Ежемесячно"
+
+#: churchill/apps/profiles/models.py:14
+msgid "For the all time"
+msgstr "За всё время"
+
+#: churchill/apps/profiles/models.py:45
 msgid "Average alcohol consumption in ml per year"
 msgstr "Среднее потребление алкоголя в год в мл"
 
-#: churchill/apps/profiles/models.py:26
+#: churchill/apps/profiles/models.py:52
 msgid "Average alcohol price for 1000 ml"
 msgstr "Средняя стоимость алкоголя за 1000 мл"
 
-#: churchill/apps/shots/models.py:11
+#: churchill/apps/shots/models.py:17
 msgid "Volume in ml"
 msgstr "Объем в мл"
 
-#: churchill/apps/shots/models.py:12
+#: churchill/apps/shots/models.py:18
 msgid "The strength of alcohol"
 msgstr "Крепость алкоголя"
 
-#: churchill/settings/base.py:130
+#: churchill/apps/users/services.py:34
+msgid "Verify your email address"
+msgstr "Подтвердите ваш имейл"
+
+#: churchill/apps/users/services.py:53
+msgid "Reset password request"
+msgstr "Ссылка на сброс пароля"
+
+#: churchill/settings/base.py:148
 msgid "Russian"
 msgstr "Русский"
 
-#: churchill/settings/base.py:131
+#: churchill/settings/base.py:149
 msgid "English"
 msgstr "Английский"
 
-#: churchill/templates/index.html:4
-msgid "Homepage"
-msgstr "Домашняя страница"
+#: churchill/templates/base.html:12 churchill/templates/base.html:15
+#: churchill/templates/base.html:21 churchill/templates/index.html:13
+msgid "Churchill"
+msgstr "Черчиль"
+
+#: churchill/templates/base.html:13 churchill/templates/base.html:22
+msgid "Application for calculation of alcohol consumption"
+msgstr "Приложение для подсчета выпитого алкоголя"
+
+#: churchill/templates/index.html:7
+msgid "Loading"
+msgstr "Загрузка"
